@startuml

title __VIEW's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace news {
      namespace view {
        class com.yyzy.constellation.news.view.PagerSlidingTabStrip {
            + delegatePageListener : OnPageChangeListener
            {static} - ATTRS : int[]
            - currentPosition : int
            - currentPositionOffset : float
            - defaultTabLayoutParams : LayoutParams
            - dividerColor : int
            - dividerPadding : int
            - dividerPaint : Paint
            - dividerWidth : int
            - expandedTabLayoutParams : LayoutParams
            - indicatorColor : int
            - indicatorHeight : int
            - lastScrollX : int
            - locale : Locale
            - pager : ViewPager
            - rectPaint : Paint
            - scrollOffset : int
            - selectionPosition : int
            - selectionTextColor : int
            - selectionTextSize : int
            - shouldExpand : boolean
            - tabBackgroundResId : int
            - tabCount : int
            - tabPadding : int
            - tabTextColor : int
            - tabTextSize : int
            - tabTypeface : Typeface
            - tabTypefaceStyle : int
            - tabsContainer : LinearLayout
            - textAllCaps : boolean
            - underlineColor : int
            - underlineHeight : int
            + PagerSlidingTabStrip()
            + PagerSlidingTabStrip()
            + PagerSlidingTabStrip()
            + getDividerColor()
            + getDividerPadding()
            + getIndicatorColor()
            + getIndicatorHeight()
            + getScrollOffset()
            + getShouldExpand()
            + getTabBackground()
            + getTabPaddingLeftRight()
            + getTextColor()
            + getTextSize()
            + getUnderlineColor()
            + getUnderlineHeight()
            + isTextAllCaps()
            + notifyDataSetChanged()
            + onRestoreInstanceState()
            + onSaveInstanceState()
            + setAllCaps()
            + setDividerColor()
            + setDividerColorResource()
            + setDividerPadding()
            + setIndicatorColor()
            + setIndicatorColorResource()
            + setIndicatorHeight()
            + setOnPageChangeListener()
            + setScrollOffset()
            + setShouldExpand()
            + setTabBackground()
            + setTabPaddingLeftRight()
            + setTextColor()
            + setTextColorResource()
            + setTextSize()
            + setTypeface()
            + setUnderlineColor()
            + setUnderlineColorResource()
            + setUnderlineHeight()
            + setViewPager()
            # onDraw()
            - addIconTab()
            - addTab()
            - addTextTab()
            - scrollToChild()
            - updateTabStyles()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace news {
      namespace view {
        interface com.yyzy.constellation.news.view.PagerSlidingTabStrip.IconTabProvider {
            {abstract} + getPageIconResId()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace news {
      namespace view {
        class com.yyzy.constellation.news.view.PagerSlidingTabStrip.PageListener {
            + onPageScrollStateChanged()
            + onPageScrolled()
            + onPageSelected()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace news {
      namespace view {
        class com.yyzy.constellation.news.view.PagerSlidingTabStrip.SavedState {
            {static} + CREATOR : Creator<SavedState>
            ~ currentPosition : int
            + SavedState()
            + writeToParcel()
            - SavedState()
        }
      }
    }
  }
  

  com.yyzy.constellation.news.view.PagerSlidingTabStrip -up-|> android.widget.HorizontalScrollView
  com.yyzy.constellation.news.view.PagerSlidingTabStrip o-- com.yyzy.constellation.news.view.PagerSlidingTabStrip.PageListener : pageListener
  com.yyzy.constellation.news.view.PagerSlidingTabStrip +-down- com.yyzy.constellation.news.view.PagerSlidingTabStrip.IconTabProvider
  com.yyzy.constellation.news.view.PagerSlidingTabStrip +-down- com.yyzy.constellation.news.view.PagerSlidingTabStrip.PageListener
  com.yyzy.constellation.news.view.PagerSlidingTabStrip +-down- com.yyzy.constellation.news.view.PagerSlidingTabStrip.SavedState
  com.yyzy.constellation.news.view.PagerSlidingTabStrip.PageListener .up.|> androidx.viewpager.widget.ViewPager.OnPageChangeListener
  com.yyzy.constellation.news.view.PagerSlidingTabStrip.SavedState -up-|> android.view.View.BaseSavedState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
